# pilatus

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  flake.nix
.cargo/: config.toml  config_ci.toml
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/workflows/: rust.yml
.zed/: settings.json
book/: README.md  book.toml
book/src/: SUMMARY.md  getting-started.md  introduction.md  structure.md
book/src/core-concepts/: devices.md  recipes.md
book/src/getting-started/: first-app.md  first-device.md  first-extension.md  installation.md
examples/stream/: Cargo.toml
examples/stream/src/: main.rs  producer.rs  web.rs
examples/stream/src/producer/: mod.rs  queryable.rs  sender_collection.rs
examples/tick/: Cargo.toml
examples/tick-app/: Cargo.toml  README.md  requests.http
examples/tick-egui/: Cargo.toml
examples/tick-egui/src/: main.rs  recipe_selector.rs
examples/tick-rt/: Cargo.toml
examples/tick-rt/src/: greeter.rs  lib.rs  manual_tick.rs  timer_tick.rs
examples/tick/data/: config.json
examples/tick/src/: greeter.rs  lib.rs  main.rs  manual_tick.rs  timer_tick.rs
pilatus/: Cargo.toml
pilatus-axum/: Cargo.toml  README.md
pilatus-axum-rt/: Cargo.toml
pilatus-axum-rt/resources/: image_viewer.html
pilatus-axum-rt/src/: abort.rs  device.rs  frontend_config.rs  hosted_service.rs  image.rs  inject.rs  lib.rs  logo.rs  logs.rs  recipe.rs  time.rs  ws.rs  zip_writer_wrapper.rs
pilatus-axum-rt/src/device/: mod.rs  topic_discovery.rs
pilatus-axum-rt/src/recipe/: export.rs  file.rs  mod.rs
pilatus-axum-rt/src/recipe/import/: mod.rs  websocket_reader.rs  zip_reader_wrapper.rs
pilatus-axum-rt/src/recipe/import/tests/: conflicting_device_after_import.rs  duplicate_self_allowed.rs  mod.rs  replace_self_allowed.rs  replace_without_files.rs  success_replace.rs  with_variables.rs
pilatus-axum-rt/tests/: import_export_with_web.rs
pilatus-axum/src/: abort.rs  dependency_provider.rs  device_response.rs  image.rs  inject.rs  into_response.rs  io_stream_body.rs  lib.rs  minfac_extensions.rs  routing.rs  web_component.rs  ws.rs
pilatus-axum/src/into_response/: device_response.rs  io_stream_body.rs  mod.rs  script.rs
pilatus-emulation-camera/: Cargo.toml  requests.http
pilatus-emulation-camera-rt/: Cargo.toml  README.md  requests.http
pilatus-emulation-camera-rt/src/: delete_collection.rs  device.rs  get_image.rs  lib.rs  list_collections.rs  pause.rs  permanent_recording.rs  publish_frame.rs  record.rs  subscribe.rs  upload_image.rs
pilatus-emulation-camera-rt/tests/: record.rs  stop_streaming.rs  upload_image.rs
pilatus-emulation-camera/src/: device.rs  lib.rs  permanent_recording.rs  record.rs
pilatus-emulation-camera/tests/: record.rs
pilatus-engineering/: Cargo.toml  design_decisions.md
pilatus-engineering-camera/: Cargo.toml
pilatus-engineering-camera-rt/: Cargo.toml
pilatus-engineering-camera-rt/src/: lib.rs
pilatus-engineering-camera-rt/src/emulation/: list_collections.rs  mod.rs  pause.rs  permanent_recording.rs  publish_frame.rs  record.rs  subscribe.rs
pilatus-engineering-camera-rt/tests/: record.rs
pilatus-engineering-rt/: Cargo.toml
pilatus-engineering-rt/resources/: image_viewer.html
pilatus-engineering-rt/src/: image.rs  lib.rs
pilatus-engineering-rt/src/image/: logo.rs  mod.rs  png.rs  web.rs
pilatus-engineering/src/: image.rs  lib.rs  spatial.rs
pilatus-engineering/src/camera/: record.rs
pilatus-engineering/src/image/: broadcaster.rs  collection.rs  encode.rs  logo.rs  message.rs  meta.rs  mod.rs  png.rs  protocol.rs  stable_hash.rs  web.rs
pilatus-engineering/src/image/keys/: image_key.rs  image_selector.rs  mod.rs  specific_image_key.rs
pilatus-engineering/src/image/message/: meta.rs  mod.rs
pilatus-engineering/src/image/meta/: any_multimap.rs  error.rs  mod.rs
pilatus-engineering/src/image/meta/keys/: image_selector.rs
pilatus-engineering/src/image/protocol/: decode.rs  encode.rs
pilatus-engineering/src/spatial/: angle.rs  frame.rs  invertibletransform.rs  invertibletransform3d.rs  length.rs  mod.rs  nalgebra.rs  relative_area.rs  relative_polygon.rs  relative_rectangle.rs
pilatus-imask/: Cargo.toml
pilatus-imask/src/: decode.rs  encode.rs  lib.rs
pilatus-rt/: Cargo.toml  README.md
pilatus-rt/src/: device.rs  lib.rs  logo.rs  metadata_future.rs  occurance_counter.rs  recipe.rs  runtime.rs  shutdown.rs  tracing.rs
pilatus-rt/src/logo/: mod.rs
pilatus-rt/src/recipe/: actions.rs  export.rs  fassade.rs  file.rs  has_same_content.rs  import.rs  mod.rs  parameters.rs  recipes.rs  service_builder.rs
pilatus-rt/src/recipe/fassade/: builder.rs  mod.rs
pilatus-rt/src/recipe/import/: merge_strategy.rs  mod.rs
pilatus-rt/src/recipe/import/merge_strategy/: duplicate.rs  mod.rs  replace.rs  unspecified.rs
pilatus-rt/src/recipe/parameters/: mod.rs  variables.rs
pilatus-rt/src/tracing/: logfile_writer.rs  mod.rs
pilatus/src/: blocking.rs  config.rs  device.rs  entry_io.rs  file.rs  hosted_service.rs  lib.rs  logo.rs  name.rs  recipe.rs  relative.rs  settings.rs  shutdown.rs  subscribe.rs  tracing.rs  unstable.rs  uuid_wrapper.rs
pilatus/src/device/: active_state.rs  minfac_ext.rs  mod.rs  spawner.rs  system.rs  validation.rs
pilatus/src/device/system/: error.rs  handler_closure.rs  handler_result.rs  identifier.rs  mod.rs  responder.rs  sender.rs
pilatus/src/hosted_service/: minfac_utilities.rs  mod.rs
pilatus/src/logo/: dimension.rs  mod.rs
pilatus/src/name/: mod.rs  name_wrapper.rs
pilatus/src/recipe/: device.rs  device_config.rs  duplicate_recipe.rs  entry_io.rs  error.rs  file.rs  mod.rs  ord_hash_map.rs  recipe.rs  recipes.rs  service.rs  variable.rs  variables.rs
pilatus/src/recipe/file/: device.rs  mod.rs
pilatus/src/recipe/variable/: maybe.rs  mod.rs
pilatus/src/relative/: path.rs  percentage.rs  range.rs
pilatus/src/relative/path/: mod.rs  relative_dir_path.rs  relative_file_path.rs  relative_resource_path.rs
pilatus/src/sync/: abort.rs  accessor.rs  execute_blocking.rs  mod.rs  once_extractor.rs
(+1 files in other folders)
