[workspace]
resolver = "2"

members = [
    "pilatus",
    "pilatus-axum",
    "pilatus-axum-rt",
    "pilatus-emulation-camera",
    "pilatus-engineering",
    "pilatus-engineering-rt",
    "pilatus-rt",
    "examples/stream",
    "examples/tick",
    "examples/tick-egui",
]

[workspace.dependencies]
anyhow = "1"
bytes = "1"
chrono = "0.4"
futures = "0.3"
futures-channel = "0.3"
futures-util = "0.3"
image = { version = "0.25", default-features = false, features = ["png"] }
minfac = "0.1"
pilatus = { path = "pilatus" }
pilatus-rt = { path = "pilatus-rt" }
pilatus-axum = { path = "pilatus-axum" }
pilatus-axum-rt = { path = "pilatus-axum-rt" }
pilatus-emulation-camera = { path = "pilatus-emulation-camera" }
pilatus-engineering = { path = "pilatus-engineering" }
pilatus-engineering-rt = { path = "pilatus-engineering-rt" }
serde = "1"
serde_json = { version = "1", features = ["preserve_order"] }
smallvec = "1"
thiserror = "2"
tokio = "1"
tracing = "0.1"
uuid = "1"
