[workspace]
resolver = "2"

members = [
    "pilatus",
    "pilatus-axum",
    "pilatus-axum-rt",
    "pilatus-emulation-camera",
    "pilatus-emulation-camera-rt",
    "pilatus-engineering",
    "pilatus-engineering-rt",
    "pilatus-rt",
    "examples/stream",
    "examples/tick",
    "examples/tick-app",
    "examples/tick-rt",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/mineichen/pilatus"
readme = "README.md"
keywords = ["async", "actors", "framework", "industrial", "computer-vision"]
categories = ["asynchronous", "rust-patterns", "science"]

[workspace.dependencies]
anyhow = "1"
bytes = "1"
chrono = "0.4"
futures = "0.3"
futures-channel = "0.3"
futures-util = { version = "0.3", default-features = false }
image = { version = "0.25", default-features = false, features = ["png"] }
imbuf = "0.3.3"
impex = "0.1.0"
minfac = "0.1"
pilatus = { version = "0.1.0", path = "pilatus" }
pilatus-rt = { version = "0.1.0", path = "pilatus-rt" }
pilatus-axum = { version = "0.1.0", path = "pilatus-axum" }
pilatus-axum-rt = { version = "0.1.0", path = "pilatus-axum-rt" }
pilatus-emulation-camera = { version = "0.1.0", path = "pilatus-emulation-camera" }
pilatus-emulation-camera-rt = { version = "0.1.0", path = "pilatus-emulation-camera-rt" }
pilatus-engineering = { version = "0.1.0", path = "pilatus-engineering" }
pilatus-engineering-rt = { version = "0.1.0", path = "pilatus-engineering-rt" }
pilatus-tick = { path = "examples/tick" }
pilatus-tick-rt = { path = "examples/tick-rt" }
serde = "1"
sealedstruct = { version = "0.1.0", features = ["serde"] }
serde_json = { version = "1", features = ["preserve_order"] }
smallvec = "1"
thiserror = "2"
testresult = "0.4.1"
tokio = "1"
tracing = "0.1"
uuid = "1"

# [patch.crates-io]
# imbuf = { path = "../imbuf" }
# sealedstruct = { path = "../sealedstruct/sealedstruct" }
