[package]
edition = "2021"
name = "pilatus-axum-rt"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-stream = "0.3"
async_zip = { version = "0.0.17", default-features = false, features = [
  "deflate",
  "tokio",
] }
axum = { version = "0.8", features = ["ws", "macros"] }
bytes = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
futures = { workspace = true }
futures-lite = "2"
hyper = { version = "1.1", features = ["client"] }
image = { workspace = true, optional = true }
minfac = { workspace = true }
pilatus = { path = "../pilatus", features = ["tokio"] }
pilatus-axum = { path = "../pilatus-axum" }
pilatus-engineering = { path = "../pilatus-engineering", features = ["image-algorithm"], optional = true }
sealedstruct = { git = "https://github.com/mineichen/sealedstruct.git", branch = "main", features = [
  "serde",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync", "macros"] }
tokio-util = "0.7"
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tracing = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }

[dev-dependencies]
pilatus = { path = "../pilatus", features = ["unstable"] }
pilatus-rt = { path = "../pilatus-rt", features = ["unstable"] }
reqwest = "0.12.5"
tempfile = "3"
tokio-tungstenite = "0.26"

[features]
default = ["engineering"]
engineering = ["dep:pilatus-engineering", "pilatus-axum/engineering", "image"]
