[package]
edition = "2021"
name = "pilatus-axum-rt"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
async_zip = { version = "0.0.18", default-features = false, features = [
    "deflate",
    "tokio",
] }
axum = { version = "0.8", features = ["ws", "macros"] }
bytes.workspace = true
chrono = { workspace = true, features = ["serde"] }
futures.workspace = true
futures-lite = "2"
hyper = { version = "1.1", features = ["client"] }
image = { workspace = true, optional = true }
minfac.workspace = true
pilatus = { workspace = true, features = ["minfac"] }
pilatus-axum.workspace = true
pilatus-engineering = { workspace = true, optional = true }
sealedstruct = { git = "https://github.com/mineichen/sealedstruct.git", branch = "main", features = [
    "serde",
] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["sync", "macros"] }
tokio-util = "0.7"
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tracing.workspace = true
uuid = { workspace = true, features = ["serde", "v4"] }

# Dev dependencies cannot be optional
pilatus-rt = { workspace = true, features = ["unstable"], optional = true }
pilatus-engineering-rt = { workspace = true, optional = true } # Required, because other creates add "pilatus-axum/engineering" feature... Reverse the dependency order, so pilatus-engineering knows pilatus-axum instead of vice versa 
tokio-tungstenite = { version = "0.28", optional = true }
tempfile = { version = "3", optional = true }
reqwest = { version = "0.12.5", features = ["json"], optional = true }

[features]
default = []
engineering = ["dep:pilatus-engineering", "pilatus-axum/engineering", "image"]
integration = ["dep:reqwest", "dep:tempfile", "dep:tokio-tungstenite", "dep:pilatus-rt", "pilatus/unstable", "pilatus-engineering-rt"]
