[package]
name = "pilatus-axum-rt"
description = "Runtime for the Pilatus Axum web integration"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
async_zip = { version = "0.0.18", default-features = false, features = [
    "deflate",
    "tokio",
] }
axum = { version = "0.8", features = ["ws", "macros"] }
bytes.workspace = true
chrono = { workspace = true, features = ["serde"] }
futures.workspace = true
futures-lite = "2"
hyper = { version = "1.1", features = ["client"] }
image = { workspace = true, optional = true }
minfac.workspace = true
pilatus = { workspace = true, features = ["minfac"] }
pilatus-axum.workspace = true
sealedstruct.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["sync", "macros"] }
tokio-util = "0.7"
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tracing.workspace = true
uuid = { workspace = true, features = ["serde", "v4"] }

# Dev dependencies cannot be optional
pilatus-rt = { workspace = true, features = ["unstable"], optional = true }
tokio-tungstenite = { version = "0.29", optional = true }
tempfile = { version = "3", optional = true }
reqwest = { version = "0.13", features = ["json"], optional = true }

[features]
default = []
integration = ["dep:reqwest", "dep:tempfile", "dep:tokio-tungstenite", "dep:pilatus-rt", "pilatus/unstable"]
