[package]
name = "pilatus-axum"
description = "Axum web integration for the Pilatus framework"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
async-stream = "0.3"
axum = { version = "0.8", features = ["ws"] }
bytes.workspace = true
futures.workspace = true
minfac.workspace = true
pilatus = { workspace = true, features = ["tokio"]}
piper = "0.2.0"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid = { workspace = true, features = ["serde", "v4"] }
