[package]
name = "pilatus-emulation-camera-rt"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
bytes.workspace = true
chrono.workspace = true
futures.workspace = true
image.workspace = true
imbuf.workspace = true
minfac.workspace = true
pilatus = { workspace = true, features = ["minfac"] }
pilatus-emulation-camera = { workspace = true, features = ["unstable"] }
pilatus-engineering = { path = "../pilatus-engineering" }
pilatus-axum.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["sync"] }
tokio-stream = { version = "0.1", features = ["fs", "sync"] }
tracing.workspace = true

# dev-dependencies cannot be optional
tempfile = { version = "3", optional = true }
serde_json = { version = "1", optional = true }
pilatus-axum-rt = { workspace = true, optional = true }
pilatus-engineering-rt = { workspace = true, optional = true, features = ["axum"] }
pilatus-rt = { workspace = true, features = ["unstable"], optional = true }
reqwest = { version = "0.13", optional = true }

[dev-dependencies]
tracing-test = { version = "0.2", features = ["no-env-filter"] }
tokio = { workspace = true, features = ["sync", "macros"]}
imbuf = { workspace = true, features = ["image_0_25"] }

[features]
integration = [
    "tempfile", 
    "serde_json", 
    "pilatus-rt", 
    "pilatus-axum-rt", 
    "pilatus-engineering-rt", 
    "reqwest"
]
