[package]
name = "pilatus-emulation-camera"
version = "0.1.0"
edition = "2024"

[dependencies]
pilatus.workspace = true
serde.workspace = true
impex = { workspace = true, optional = true }

[dev-dependencies]
serde_json.workspace = true

[features]
unstable = []
impex = ["dep:impex", "pilatus/impex"]