[package]
name = "pilatus-emulation-camera"
description = "Camera emulation for the Pilatus framework"
version.workspace = true
edition = "2024"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
pilatus.workspace = true
serde.workspace = true
impex = { workspace = true, optional = true }

[dev-dependencies]
serde_json.workspace = true

[features]
unstable = []
impex = ["dep:impex", "pilatus/impex"]