[package]
name = "pilatus-engineering-camera-rt"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
image = { workspace = true }
minfac = { workspace = true }
pilatus = { path = "../pilatus" }
pilatus-engineering = { path = "../pilatus-engineering", features = ["image-algorithm"] }
pilatus-engineering-camera = { path = "../pilatus-engineering-camera" }
pilatus-axum = { path = "../pilatus-axum" }
serde = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tokio-stream = { version = "0.1", features = ["fs", "sync"] }
tracing = { workspace = true }

tempfile = { version = "3", optional = true }
pilatus-rt = { path = "../pilatus-rt", features = ["unstable"], optional = true }
serde_json = { version = "1", optional = true } 

[dev-dependencies]
tokio = { workspace = true, features = ["sync", "macros"]}

[features]
# default = ["integrationtest"]
integrationtest = ["pilatus-rt", "tempfile", "serde_json"]