[package]
name = "pilatus-engineering-rt"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
axum = { version = "0.8", features = ["ws", "macros"], optional = true }
bytes.workspace = true
chrono = { workspace = true, features = ["serde"], optional = true }
futures.workspace = true
image.workspace = true # Must remain an internal dependency
imbuf.workspace = true 
minfac.workspace = true
pilatus = { workspace = true, features = ["minfac"] }
pilatus-axum = { workspace = true, optional = true }
pilatus-engineering = { workspace = true }
resvg = { version = "0.45.0" }
thiserror.workspace = true
tracing.workspace = true

# Dev dependencies cannot be optonal
pilatus-rt = { workspace = true, features = ["unstable"], optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
tokio = { workspace = true, optional = true }

[features]
axum = ["dep:axum", "dep:pilatus-axum", "dep:tokio", "dep:chrono", "dep:serde", "pilatus-engineering/axum"]
unstable = []
integration = ["dep:pilatus-rt"]
