[package]
name = "pilatus-engineering-rt"
description = "Runtime for Pilatus engineering utilities"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
axum = { version = "0.8", features = ["ws", "macros"], optional = true }
bytes.workspace = true
chrono = { workspace = true, features = ["serde"], optional = true }
futures.workspace = true
image.workspace = true # Must remain an internal dependency
imbuf = { workspace = true, features = ["image_0_25"] }
minfac.workspace = true
pilatus = { workspace = true, features = ["minfac"] }
pilatus-axum = { workspace = true, optional = true }
pilatus-engineering.workspace = true
resvg = { version = "0.47.0" }
thiserror.workspace = true
tracing.workspace = true

# Dev dependencies cannot be optonal
pilatus-rt = { workspace = true, features = ["unstable"], optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
tokio = { workspace = true, optional = true }

[features]
axum = ["dep:axum", "dep:pilatus-axum", "dep:tokio", "dep:chrono", "dep:serde", "pilatus-engineering/axum"]
unstable = []
integration = ["dep:pilatus-rt"]
