[package]
edition = "2021"
name = "pilatus-engineering"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
approx = "0.5"
bytes.workspace = true
futures.workspace = true
imbuf.workspace = true
jpeg-encoder = { version = "0.6", features = ["simd"], optional = true }
nalgebra = { version = "0.34", optional = true }
pilatus = { workspace = true, features = ["subscribe"] }
pilatus-axum = { workspace = true, optional = true }
seahash = "4.1"
sealedstruct = { git = "https://github.com/mineichen/sealedstruct.git", branch = "main", features = [
    "serde",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }
smallvec.workspace = true
thiserror.workspace = true
tracing.workspace = true

tokio = { workspace = true, features = ["sync"], optional = true }
tokio-stream = { version = "0.1", features = ["fs", "sync"], optional = true }

[dev-dependencies]
nalgebra = "0.34"
serde_json.workspace = true


[features]
axum = ["dep:pilatus-axum", "dep:jpeg-encoder", "dep:serde_json"]
tokio = ["dep:tokio", "tokio-stream"]
