[package]
name = "pilatus-engineering"
description = "Engineering utilities (images, angles, matrices) for the Pilatus framework"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
approx = "0.5"
bytes.workspace = true
futures.workspace = true
imbuf.workspace = true
nalgebra = { version = "0.34", optional = true }
pilatus = { workspace = true, features = ["subscribe"] }
pilatus-axum = { workspace = true, optional = true }
seahash = "4.1"
sealedstruct.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
smallvec.workspace = true
thiserror.workspace = true
tracing.workspace = true


tokio = { workspace = true, features = ["sync"], optional = true }
tokio-stream = { version = "0.1", features = ["fs", "sync"], optional = true }

[dev-dependencies]
nalgebra = "0.34"
serde_json.workspace = true
testresult = "0.4.1"


[features]
axum = ["dep:pilatus-axum"]
tokio = ["dep:tokio", "tokio-stream"]
