[package]
name = "pilatus-imask"
version = "0.1.0"
edition = "2021"

[dependencies]
imask = { workspace = true, features = ["async-io"] }
minfac.workspace = true
pilatus-engineering.workspace = true
futures.workspace = true

[dev-dependencies]
imbuf.workspace = true
pilatus-engineering = { workspace = true, features = ["encode"] }
testresult = "0.4.1"
