[package]
name = "pilatus-rt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
pilatus = { path = "../pilatus", features = ["tokio"] }
minfac = "0.0.1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "^1.0.0", features = [
    "rt-multi-thread",
    "time",
    "fs",
    "sync",
    "signal",
] }
uuid = { version = "1", features = ["serde", "v4"] }
tracing = "0.1"
tempfile = "3"
futures = "0.3"
itertools = "0.13"
pin-project = "1.0.10"
serde_json = "1.0"
thiserror = "1"
tokio-stream = { version = "0.1", features = ["fs", "sync"] }
tokio-util = { version = "0.7", features = ["compat"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1"


# tracing
console-subscriber = { version = "0.4", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
tracing-appender = { version = "0.2", optional = true }

[dev-dependencies]
pilatus = { path = "../pilatus", features = ["unstable"] }


[features]
default = ["tracing"]
tracing = ["console-subscriber", "tracing-subscriber", "tracing-appender"]
unstable = []
