[package]
name = "pilatus-rt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1"
chrono = { workspace = true, features = ["serde"] }
futures = { workspace = true }
itertools = "0.14"
minfac = { workspace = true }
pilatus = { path = "../pilatus", features = ["tokio"] }
pin-project = "1.0.10"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tempfile = "3"
thiserror = { workspace = true }
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "time",
    "fs",
    "sync",
    "signal",
] }
tokio-stream = { version = "0.1", features = ["fs", "sync"] }
tokio-util = { version = "0.7", features = ["compat"] }
tracing = { workspace = true }
uuid = { version = "1", features = ["serde", "v4"] }

# tracing
console-subscriber = { version = "0.4", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
tracing-appender = { version = "0.2", optional = true }

[dev-dependencies]
pilatus = { path = "../pilatus", features = ["unstable"] }


[features]
default = ["tracing"]
tracing = ["console-subscriber", "tracing-subscriber", "tracing-appender"]
unstable = []
