[package]
name = "pilatus-rt"
description = "Runtime support for the Pilatus deterministic simulation framework"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
async-trait = "0.1"
chrono = { workspace = true, features = ["serde"] }
futures.workspace = true
itertools = "0.14"
minfac.workspace = true
pilatus = { workspace = true, features = ["minfac", "tokio"] }
pin-project = "1.0.10"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tempfile = "3"
thiserror.workspace = true
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "time",
    "fs",
    "sync",
    "signal",
] }
tokio-stream = { version = "0.1", features = ["fs", "sync"] }
tokio-util = { version = "0.7", features = ["compat"] }
tracing.workspace = true
uuid = { version = "1", features = ["serde", "v4"] }

# tracing
console-subscriber = { version = "0.5", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
tracing-appender = { version = "0.2", optional = true }

[dev-dependencies]
pilatus = { workspace = true, features = ["unstable"] }
testresult.workspace = true

[features]
default = ["tracing"]
tracing = ["console-subscriber", "tracing-subscriber", "tracing-appender"]
unstable = []
