[package]
edition = "2021"
name = "pilatus"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Stable
anyhow = { workspace = true }
bytes = { workspace = true }
rayon = { version = "1", optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
  "fs",
  "rt",
  "sync",
  "time",
  "tracing",
], optional = true }
uuid = { workspace = true, features = ["serde", "v4"] }
smallvec = "1"
indexmap = { version = "2", features = ["serde"] }

# Unstable public
approx = "0.5"
async-trait = "0.1"
chrono = { workspace = true, features = ["serde"] }
config = { version = "0.15", features = ["json"], default-features = false }
futures = { workspace = true }
minfac = { workspace = true, optional = true }
sealedstruct = { git = "https://github.com/mineichen/sealedstruct.git", branch = "main", features = [
  "serde",
] }
tracing = { workspace = true }

# Unstable private
glob = "0.3"
stream-broadcast = { version = "0.3", optional = true }

[dev-dependencies]
tempfile = { version = "3" }
tokio = { workspace = true, features = [
  "fs",
  "macros",
  "rt",
  "sync",
  "time",
  "tracing",
] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable)'] }

[features]
default = ["minfac"]
subscribe = ["stream-broadcast"]
# Ok to depend during tests, as compile errors immediately show up in that project
# When project which uses pilatus/unstable itself is referenced, it doesn't break if unstable features change
# This feature should only be activated in tests and leaf-crates, on which noone depends
# With these restrictions, we can avoid using a dedicated cfg (like 'tokio_unstable'). For tokio this doesn't work, as e.g. tracing-subscriber relies on unstable features 
unstable = []
