[package]
edition = "2021"
name = "stream"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
coinbase-pro-rs = "0.8.1"
futures = "0.3"
minfac = "0.0.1"
pilatus = {path = "../../pilatus"}
pilatus-axum = {path = "../../pilatus-axum"}
pilatus-axum-rt = {path = "../../pilatus-axum-rt"}
pilatus-rt = {path = "../../pilatus-rt"}
sealedstruct = {git = "https://github.com/mineichen/sealedstruct.git", branch = "main"}
serde = "1"
serde_json = "1"
tokio = {version = "1", features = ["sync"]}
tracing = "0.1"

[dev-dependencies]
tokio = {version = "1", features = ["sync", "macros"]}
