[package]
edition = "2021"
name = "stream"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
coinbase-pro-rs = "0.8.1"
futures = { workspace = true }
minfac = { workspace = true }
pilatus = { path = "../../pilatus" }
pilatus-axum = { path = "../../pilatus-axum" }
pilatus-axum-rt = { path = "../../pilatus-axum-rt" }
pilatus-rt = { path = "../../pilatus-rt" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["sync", "macros"]}
