[package]
edition = "2021"
name = "stream"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
coinbase-pro-rs = "0.8.1"
futures.workspace = true
minfac.workspace = true
pilatus.workspace = true
pilatus-axum.workspace = true
pilatus-axum-rt.workspace = true
pilatus-rt.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["sync", "macros"]}
