[package]
name = "tick-egui"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33"
egui = "0.33"
ehttp = { version = "0.5.0", features = ["json"] }
env_logger = { version = "0.11", default-features = false, features = [
    "auto-color",
    "humantime",
] }
pilatus = { path = "../../pilatus", default-features = false }
