[package]
name = "pilatus-tick-rt"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
futures.workspace = true
impex.workspace = true
minfac.workspace = true
pilatus.workspace = true
pilatus-axum.workspace = true
pilatus-tick = { workspace = true, features = ["unstable"] }
serde.workspace = true
serde_json.workspace = true
tokio = "1"
tracing.workspace = true

[features]
unstable = []