[package]
name = "pilatus-tick"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
futures.workspace = true
minfac.workspace = true
pilatus.workspace = true
pilatus-axum.workspace = true
pilatus-axum-rt.workspace = true
pilatus-rt.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = "1"
tracing.workspace = true
